<resources>
    <string name="app_name">Class Check</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="welcome_first_fragment">Welcome To</string>
    <string name="welcome_second_fragment">CS Online Class Checker</string>
    <string name="class_first_fragment">Search for your Classes!</string>
    <string name="class_second_fragment">All Classes for CSUMB CSIT Online Degree</string>
    <string name="button">Submit</string>
    <string name="please_enter_the_class_id">Please Enter the Class ID</string>
    <string name="textview">TextView</string>
    <string name="cst_237_intro_to_computer_architecture">CST 237 - Intro to Computer Architecture</string>
    <string name="math_150_calculus_i">MATH 150 - Calculus I</string>
    <string name="math_270_mathematics_for_computing_or_math_151_calculus_ii_or">MATH 270 - Mathematics for Computing, or MATH 151 - Calculus II, or</string>
    <string name="a_linear_algebra_or_an_advanced_statistics_course">A linear algebra or an advanced statistics course</string>
    <string name="cst_300_major_proseminar">CST 300 - Major ProSeminar</string>
    <string name="cst_338_software_design">CST 338 - Software Design</string>
    <string name="cst_311_intro_to_computer_networks">CST 311 - Intro to Computer Networks</string>
    <string name="prerequisites_and_graduation_requirements_for_major">Prerequisites and graduation requirements for major</string>
    <string name="all_core_classes_for_cs_online_degree_program">All Core Classes for CS Online Degree program</string>
    <string name="cst_438_software_engineering">CST 438 - Software Engineering</string>
    <string name="cst_334_operating_systems">CST 334 - Operating Systems</string>
    <string name="cst_336_internet_programming">CST 336 - Internet Programming</string>
    <string name="cst_363_introduction_to_database_systems">CST 363 - Introduction to Database Systems</string>
    <string name="cst_370_design_and_analysis_of_algorithms">CST 370 - Design and Analysis of Algorithms</string>
    <string name="cst_462s_race_gender_class_in_the_digital_world">CST 462S - Race, Gender, Class in the Digital World</string>
    <string name="cst_499_computer_science_capstone">CST 499 - Computer Science Capstone</string>
    <string name="cst_383_introduction_to_data_science_or">CST 383 - Introduction to Data Science, or</string>
    <string name="must_complete_48_unit_general_education_breadth_program_including_9_credits_of_upper_division_ge_in_areas_b_c_and_d_in_order_to_meet_graduation_requirements_csumb_also_requires_completion_of_campus_specific_undergraduate_requirements">*Must Complete 48 unit General Education Breadth program, including 9 credits of upper division GE in areas B, C, and D in order to meet graduation requirements. CSUMB also requires completion of campus-specific Undergraduate Requirements.</string>
    <string name="cst_325_graphics_programming">CST 325 - Graphics Programming</string>
    <string name="math_170_discrete_mathematics">MATH 170 - Discrete Mathematics</string>
    <string name="cst237_course">CST 237 - Intro to Computer Architecture</string>
    <string name="cst237_desc">This course introduces computer architectures and computer systems management. Includes data representation, memory, registers, and internals of common computers and system interfaces. Knowledge of C/C++ programming helpful but not mandatory.</string>
    <string name="invalid_Txt">Sorry, The Class ID Is Invalid. Please Try Again!</string>
    <string name="cst170_course">MATH 170 - Discrete Mathematics</string>
    <string name="cst170_desc">Includes sets and sequences, elementary logic, relations, induction, counting principles, discrete probability, Boolean algebra, logic networks, matrices, graph theory, and trees. Applies these topics to real life and branches of science, particularly computer science.</string>
    <string name="cst150_course">MATH 150 - Calculus I</string>
    <string name="cst150_desc">Includes limits, continuity, derivatives including trigonometric functions, chain rule, curve sketching, extremum problems, implicit differentiation, related rates, Mean Value Theorem, logarithmic and trigonometric functions, introduction to integration, fundamental theorem of calculus, substitution, and applications.</string>
    <string name="cst151_course">MATH 151 - Calculus II</string>
    <string name="cst151_desc">Includes the calculus of exponential and logarithmic functions, trigonometric and inverse trigonometric functions, techniques of integration, separable differential equations, Taylor polynomials, L’Hôpital’s rule, improper integrals, series, and introduction to partial derivatives.</string>
    <string name="cst270_course">MATH 270 - Mathematics for Computing</string>
    <string name="cst300_course">CST 300 - Major ProSeminar</string>
    <string name="cst338_course">CST 338 - Software Design</string>
    <string name="cst311_course">CST 311 - Intro to Computer Networks</string>
    <string name="cst334_course">CST 334 - Operating Systems</string>
    <string name="cst336_course">CST 336 - Internet Programming</string>
    <string name="cst363_course">CST 363 - Introduction to Database Systems</string>
    <string name="cst370_course">CST 370 - Design and Analysis of Algorithms</string>
    <string name="cst438_course">CST 438 - Software Engineering</string>
    <string name="cst462_course">CST 462S - Race, Gender, Class in the Digital World</string>
    <string name="cst499_course">CST 499 - Computer Science Capstone</string>
    <string name="cst383_course">CST 383 - Introduction to Data Science</string>
    <string name="cst325_course">CST 325 - Graphics Programming</string>
    <string name="cst270_desc">This course covers basic linear algebra, continuous and discrete probability, and a continuation of elementary discrete mathematics from MATH 170. It emphasizes mathematical theory as well as applicable methods. Topics include systems of linear equations, matrices, determinants, vector spaces, conditional probability, distributions and densities, expected value, functions of random variables, automata, and algorithmic complexity.</string>
    <string name="cst300_desc">Helps students identify and articulate personal, professional, and social goals. Provides an integrated overview of the computer science and communication design majors and their requirements. Students develop a plan for their learning goals. Students learn writing, presentation, research and critical-thinking skills within the diversified fields of information technology and communication design.</string>
    <string name="cst338_desc">Provides students with the fundamental concepts to develop large-scale software, focusing on the object-oriented programming techniques. Coverage includes the introduction to Java programming language, object-oriented programming, software life cycle and development processes, requirements analysis, and graphical user interface development.</string>
    <string name="cst311_desc">Survey of Telecomm and Data Comm Technology Fundamentals, Local Area Network, Wide Area Network, Internet and internetworking protocols including TCP/IP, network security and performance, emerging industry trends such as voice over the network and high speed networking. Designed as a foundation for students who wish to pursue more advanced network studies including certificate programs. Includes hands-on networking labs that incorporate Cisco CCNA lab components.</string>
    <string name="cst334_desc">Students in this course will learn about the use and design of modern operating systems, focusing on Linux. On the “use” side, students will learn the Linux command line, to write shell scripts, and to build programs with GNU utilities like awk, sed, and make. On the “design” side, students will develop a deep understanding of process management, memory management, file systems, and concurrency, and how they apply to modern technologies like virtualization and cloud computing.</string>
    <string name="cst336_desc">Provides students with dynamic web application development skills, focusing on the integration of server-side programming, database connectivity, and client-side scripting. Coverage includes the Internet architecture, responsive design, RESTful web services, and Web APIs. \n</string>
    <string name="cst363_desc">This course provides balanced coverage of database use and design,focusing on relational databases. Students will learn to design relational schemas, write SQL queries, access a DB programmatically,and perform database administration. Students will gain a working knowledge of the algorithms and data structures used in query evaluation and transaction processing. Students will also learn to apply newer database technologies such as XML, NoSQL, and Hadoop.</string>
    <string name="cst370_desc">Students learn important data structures in computer science and acquire fundamental algorithm design techniques to get the efficient solutions to several computing problems from various disciplines. Topics include the analysis of algorithm efficiency, hash, heap, graph, tree, sorting and searching, brute force, divide-and-conquer, decrease-and-conquer, transform-and-conquer, dynamic programming, and greedy programming.</string>
    <string name="cst438_desc">Prepares students for large-scale software development using software engineering principles and techniques. Coverage includes software process, requirements analysis and specification, software design, implementation, testing, and project management. Students are expected to work in teams to carry out a realistic software project.</string>
    <string name="cst462_desc">\"Provides students with key knowledge of race, gender, class and social justice especially in relation to technology in today’s digital world. Students challenge the barriers of expertise, gender, race, class, and location that restrict wider access to and understanding of the production and usage of new technologies. Students will engage in a practical experience in the community via their service placements, which will provide depth and context for considering questions of justice, equality, social responsibilities and the complexities of technology and its societal impact. The course uses scenario based approach combining presentations, discussions, and reflections to allow students explore the relationship between critical reflection and action on the topics mentioned above. \"</string>
    <string name="cst499_desc">Students will work on a project in large groups (up to 5 students in each group), developing requirements specification, a solution plan followed by design and implementation of the solution. The problem statement for the projects will be selected by the faculty. Faculty will also play the role of a project manager directing the schedule and deliverables for these projects.</string>
    <string name="cst383_desc">In data science, data analysis and machine learning techniques are applied to visualize data, understand trends, and make predictions. In this course students will learn how to obtain data, preprocess it, apply machine learning methods, and visualize the results. A student who completes the course will have enough theoretical knowledge, and enough skill with modern statistical programming languages and their libraries,to define and perform complete data science projects.</string>
    <string name="cst325_desc">This course teaches the students the fundamentals of game programming and skills needed for game development, including GPU programming, matrix and quaternion algebra for physics calculation, animation, lighting and basics of implementing 3D models into a framework.</string>
</resources>