<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="25dp"
        android:text="@string/class_first_fragment"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/class_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/please_enter_the_class_id"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/class_ID_Results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="18sp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/textview_second3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="25dp"
        android:gravity="center"
        android:text="@string/class_second_fragment"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="234dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/csumb">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prerequisites_and_graduation_requirements_for_major"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_237_intro_to_computer_architecture"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/math_170_discrete_mathematics"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/math_150_calculus_i"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/math_270_mathematics_for_computing_or_math_151_calculus_ii_or"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="25dp"
                android:text="@string/a_linear_algebra_or_an_advanced_statistics_course"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/csumb">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/all_core_classes_for_cs_online_degree_program"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_300_major_proseminar"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_338_software_design"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_311_intro_to_computer_networks"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_334_operating_systems"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_336_internet_programming"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_363_introduction_to_database_systems"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_370_design_and_analysis_of_algorithms"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_438_software_engineering"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_462s_race_gender_class_in_the_digital_world"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_499_computer_science_capstone"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cst_383_introduction_to_data_science_or"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="25dp"
                android:text="@string/cst_325_graphics_programming"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="360dp"
                app:cardBackgroundColor="@color/csumb">

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/must_complete_48_unit_general_education_breadth_program_including_9_credits_of_upper_division_ge_in_areas_b_c_and_d_in_order_to_meet_graduation_requirements_csumb_also_requires_completion_of_campus_specific_undergraduate_requirements"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>